# TTKIA_SDK_v2

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: .env.example  examples.py
tests/: test_client.py
ttkia_sdk/: __init__.py  cli.py  client.py  code.py  models.py  tui.py
