[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttkia-sdk"
version = "2.1.0"
description = "Official Python SDK for TTKIA – Telefónica Tech Knowledge Intelligence Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "XerAR", email = "xerar@telefonica.com"}
]
keywords = ["ttkia", "sdk", "ai", "rag", "telefonica"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
examples = [
    "python-dotenv>=1.0.0",
]
dev = [
    "python-dotenv>=1.0.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/xerar/TTKIA_SDK"
Documentation = "https://github.com/xerar/TTKIA_SDK#readme"

[project.scripts]
ttkia = "ttkia_sdk.cli:main"

[tool.setuptools.packages.find]
include = ["ttkia_sdk*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
